<resources>
    <string name="app_name">SoundCloudApp</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_login">Sign In</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- Sound context menu actions -->
    <string name="action_like">Like</string>
    <string name="action_share">Share</string>
    <string name="action_repost">Repost</string>
    <string name="action_play_related">Play related tracks</string>
    <string name="action_add_to_playlist">Add to playlist</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- AccountFragment -->
    <string name="account_view_profile">View Public Profile</string>
    <string name="account_explore">Explore</string>
    <string name="account_activity">Activity</string>
    <string name="account_record">Record</string>
    <string name="account_notify_settings">Notification Settings</string>
    <string name="account_basic_settings">Basic Settings</string>
    <string name="account_help_center">Help Center</string>
    <string name="account_legal">Legal</string>
    <string name="account_sign_out">Sign out</string>
    <string name="app_version">App Version 0.1.0</string>
</resources>
