<!-- TODO: Debug ScrollView cutting off children views -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AccountFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#eeeeee">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:paddingTop="@dimen/account_layout_padding"
            android:paddingBottom="@dimen/account_layout_padding">
            <!-- TODO: Add user profile section and link to ProfileActivity -->
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/account_layout_padding">
            <Button
                style="@style/AccountButton"
                android:text="@string/account_explore"/>
            <Button
                style="@style/AccountButton"
                android:text="@string/account_activity"/>
            <Button
                style="@style/AccountButton"
                android:text="@string/account_record"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/account_layout_padding">
            <Button
                style="@style/AccountButton"
                android:text="@string/account_notify_settings"/>
            <Button
                style="@style/AccountButton"
                android:text="@string/account_basic_settings"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/account_layout_padding">
            <Button
                style="@style/AccountButton"
                android:text="@string/account_help_center"/>
            <Button
                style="@style/AccountButton"
                android:text="@string/account_legal"
                android:paddingBottom="@dimen/account_button_padding"
                android:paddingTop="@dimen/account_button_padding" />
        </LinearLayout>

        <Button
            style="@style/AccountButton"
            android:text="@string/account_sign_out"
            android:id="@+id/sign_out_button" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:id="@+id/app_version"
            android:gravity="center"
            android:text="@string/app_version"/>
    </LinearLayout>
</ScrollView>
